# QgBook

./: .editorconfig  CMakeLists.txt  QgBook.sln  README.md  피가되고살이되는.txt
QgBook/: QgBook.vcxproj  QgBook.vcxproj.filters  Resource.rc  book.c  book.h  book_zip.c  bound.h  configs.c  configs.h  configs_def.c  configs_ss.c  defs.h  doumi.c  doumi.h  main.c  move_dialog.c  page_dialog.c  pch.h  read_window.c  renex_dialog.c  resg.c  resg.xml  resource.h
QgBook/data/: style.css
QgBook/data/lang/: es.txt  ja.txt  ko.txt  zh.txt
